[gd_scene load_steps=7 format=3 uid="uid://dg5wg3hshpap0"]

[ext_resource type="Script" path="res://scripts/main_scene.gd" id="1_5b00s"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_y4r03"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_sgp55"]
sky_material = SubResource("ProceduralSkyMaterial_y4r03")

[sub_resource type="Environment" id="Environment_j6qu5"]
background_mode = 2
sky = SubResource("Sky_sgp55")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="BoxMesh" id="BoxMesh_kr4tn"]
size = Vector3(30, 1, 30)

[sub_resource type="BoxShape3D" id="BoxShape3D_25ufc"]

[node name="main_scene" type="Node3D"]
script = ExtResource("1_5b00s")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_j6qu5")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="Button1" type="Button" parent="UI"]
anchors_preset = -1
anchor_left = 0.018
anchor_top = 0.04
anchor_right = 0.018
anchor_bottom = 0.04
offset_left = 268.264
offset_top = 182.08
offset_right = 425.264
offset_bottom = 271.08
text = "青"

[node name="Button2" type="Button" parent="UI"]
anchors_preset = -1
anchor_left = 0.018
anchor_top = 0.04
anchor_right = 0.018
anchor_bottom = 0.04
offset_left = 602.264
offset_top = 185.08
offset_right = 759.264
offset_bottom = 274.08
text = "黄色"

[node name="StartButton" type="Button" parent="UI"]
anchors_preset = -1
anchor_left = 0.018
anchor_top = 0.04
anchor_right = 0.018
anchor_bottom = 0.04
offset_left = 434.264
offset_top = 314.08
offset_right = 591.264
offset_bottom = 403.08
text = "スタート"

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
mesh = SubResource("BoxMesh_kr4tn")

[node name="StaticBody3D" type="StaticBody3D" parent="MeshInstance3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D/StaticBody3D"]
transform = Transform3D(30, 0, 0, 0, 1, 0, 0, 0, 30, 0, 0, 0)
shape = SubResource("BoxShape3D_25ufc")
